[gd_scene load_steps=11 format=3 uid="uid://dcdi6skdvp808"]

[ext_resource type="Texture2D" uid="uid://b5a8cesdyvsfp" path="res://assets/shop_menu/skin-description.svg" id="1_lre0c"]
[ext_resource type="Script" path="res://userinterfaces/skin_description_menu/skin_description_menu.gd" id="1_yyu4q"]
[ext_resource type="PackedScene" uid="uid://c5evis4gxner6" path="res://userinterfaces/menu_button/menu_button.tscn" id="3_5yrx1"]
[ext_resource type="Texture2D" uid="uid://bwhdql3xaxp0o" path="res://assets/shop_menu/buy.svg" id="4_xb8qr"]

[sub_resource type="LabelSettings" id="LabelSettings_4gnjk"]
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_4inov"]
font_color = Color(0.764706, 0.588235, 0.584314, 1)
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_58rsa"]
font_size = 12
font_color = Color(0.764706, 0.588235, 0.584314, 1)
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2l1bv"]
font_color = Color(0, 1, 0, 1)
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_20bsd"]
font_color = Color(1, 0.27451, 0.211765, 1)
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_c85gc"]
font_color = Color(0.51855, 0.606701, 0.59908, 1)
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[node name="SkinDescriptionMenu" type="TextureRect"]
offset_right = 123.0
offset_bottom = 154.0
texture = ExtResource("1_lre0c")
script = ExtResource("1_yyu4q")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.02
anchor_right = 0.98
anchor_bottom = 0.98
offset_left = 3.54
offset_top = 11.92
offset_right = -4.54
offset_bottom = -53.92
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
label_settings = SubResource("LabelSettings_4gnjk")
autowrap_mode = 2

[node name="ColorRect" type="ColorRect" parent="Label"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.513233, 0.513233, 0.513233, 1)

[node name="OwnedLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -54.0
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
text = "OWNED"
label_settings = SubResource("LabelSettings_4inov")
horizontal_alignment = 1

[node name="Selected" type="Label" parent="OwnedLabel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -12.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
text = "(selected)"
label_settings = SubResource("LabelSettings_58rsa")
horizontal_alignment = 1
vertical_alignment = 2

[node name="PriceLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -32.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
text = "$100"
label_settings = SubResource("LabelSettings_2l1bv")
horizontal_alignment = 1

[node name="BuyButton" parent="." instance=ExtResource("3_5yrx1")]
custom_minimum_size = Vector2(46, 21)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -23.0
offset_top = -52.0
offset_right = 23.0
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("4_xb8qr")
texture_scale = 1.0
float_distance = 0.0

[node name="Sprite" parent="BuyButton" index="0"]
scale = Vector2(1, 1)

[node name="Sprite2D" parent="BuyButton/Sprite" index="0"]
position = Vector2(0, 0)
texture = ExtResource("4_xb8qr")

[node name="Label" type="Label" parent="BuyButton/Sprite/Sprite2D" index="0"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -23.0
offset_top = -10.5
offset_right = -23.0
offset_bottom = -10.5
grow_horizontal = 2
grow_vertical = 2
text = "BUY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InsufficientFundsLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -49.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 0
text = "TOO BROKE"
label_settings = SubResource("LabelSettings_20bsd")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LockedLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -47.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
text = "LOCKED"
label_settings = SubResource("LabelSettings_c85gc")
horizontal_alignment = 1

[connection signal="pressed" from="BuyButton" to="." method="_on_buy_button_pressed"]

[editable path="BuyButton"]
